# rotated-edth

./: .env.example  .gitignore  CLAUDE.md  DEMO_SCRIPT.md  DEPLOY.md  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
app/: __main__.py  geocoder.py  grounding.py  parser.py  routing.py  server.py  stt.py  units.py
app/presets/: kyiv.json  kyiv_bridges.geojson  paris_8.json  pokrovsk.json
app/presets/_inactive/: de_bilt.json  pokrovsk.json  utrecht.json
landing/: index.html
scripts/: fetch_ao_preset.py  fetch_bridges.py  test_pipeline.py
web/: operator.html  ops.html  style.css  unit.html
web/src/: map.ts  operator.ts  unit.ts  ws.ts
