[project]
name = "argus"
version = "0.1.0"
description = "Push-to-talk situational awareness — voice to map in seconds, anywhere on earth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "mlx-whisper>=0.4.1",
    "anthropic>=0.40",
    "mgrs>=1.4.6",
    "requests>=2.32",
    "numpy>=2.0",
    "qrcode[pil]>=8.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
